// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Text> > should render the default component with custom text 1`] = `
<div>
  <p
    class="slm-text"
  >
    Custom text
  </p>
</div>
`;

exports[`<Text> > should render the default component with custom text and custom class 1`] = `
<div>
  <p
    class="slm-text p-4"
  >
    Custom text
  </p>
</div>
`;
